--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" required>
+
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
 
+  
             <button type="submit">Submit</button>
         </form>
     </section>
